--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                       cursor: pointer;
                     "
                   >
-                    MENU
+                    <a href="menu.html">Menu</a>
                   </div>
                 </li>
                 <!-- SLIDE  -->
@@ -471,7 +471,7 @@
                       cursor: pointer;
                     "
                   >
-                    MENU
+                    <a href="menu.html">Menu</a>
                   </div>
                 </li>
                 <!-- SLIDE  -->
@@ -643,7 +643,7 @@
                       cursor: pointer;
                     "
                   >
-                    MENU
+                    <a href="menu.html">Menu</a>
                   </div>
                 </li>
               </ul>
@@ -728,9 +728,13 @@
                 <div class="mobile-nav-controller-wrap">
                   <div class="menu-controls mobile-nav-controller">
                     <div class="font-icon custom-font-icon">
-                      <span class="menu-icon menu-icon-first"></span
-                      ><span class="menu-icon menu-icon-second"></span
-                      ><span class="menu-icon menu-icon-third"></span>
+                      <span class="menu-icon menu-icon-first">
+                        <a href="menu.html">Menu</a></span
+                      ><span class="menu-icon menu-icon-second"
+                        ><a href="menu.html">Menu</a></span
+                      ><span class="menu-icon menu-icon-third"
+                        ><a href="menu.html">Menu</a></span
+                      >
                     </div>
                   </div>
                 </div>
