--- a/about.html
+++ b/about.html
@@ -119,8 +119,7 @@
             <div
               class="hero-section-wrap be-section full-screen-height full-yes be-bg-cover be-bg-parallax be-bg-overlay clearfix"
               style="
-                background: url(https://scontent.fhan15-2.fna.fbcdn.net/v/t1.15752-9/386442887_1077531969911198_1167511747855834741_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=8cd0a2&_nc_ohc=RIgTvwgHcf8AX9aDItA&_nc_ht=scontent.fhan15-2.fna&oh=03_AdTSfvKuDlwsR3pljGmjcQaT1jqPvDmJPdRaUhvStTV-5g&oe=65732643)
-                  no-repeat fixed top center;
+                background: url(upload/slider1.jpg) no-repeat fixed top center;
                 height: px !important;
               "
             >
@@ -327,7 +326,7 @@
                           <p>
                             <img
                               class="alignnone size-large wp-image-15"
-                              src="https://scontent.fhan5-1.fna.fbcdn.net/v/t1.15752-9/376559899_355018280360575_6600271366793278921_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=8cd0a2&_nc_ohc=ju2yvXfWVkIAX8JKjgG&_nc_ht=scontent.fhan5-1.fna&oh=03_AdQPxmjAxmqknVKl-7zzXfAlGJkDO_Cu66k2N5-RMnHG6A&oe=65732080"
+                              src="upload/slider1.jpg"
                               alt="about-Vịt Vương Vấn"
                               style="border-radius: 40px; margin-top: 20px"
                             />
@@ -674,7 +673,7 @@
                           <p>
                             <img
                               class="alignnone size-large wp-image-38"
-                              src="https://scontent.fhan5-6.fna.fbcdn.net/v/t1.15752-9/385484321_892471859115382_7246926374405572202_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=8cd0a2&_nc_ohc=0MOcCpD04awAX8cl-j3&_nc_ht=scontent.fhan5-6.fna&oh=03_AdT_hyQreLg6FG845clDT6F-1K22MYOboUzNF6mjjAFtBQ&oe=65730B20"
+                              src="upload/slider1.jpg"
                               alt="Vịt Vương Vấn_demos_10"
                               style="border-radius: 40px; height: 80%"
                             />
@@ -695,7 +694,7 @@
             <div class="footer-left-area">
               <div class="footer-content-inner-left">
                 <img
-                  src="https://scontent.fhan15-1.fna.fbcdn.net/v/t1.15752-9/370101367_338177318805080_6639064208401818982_n.png?_nc_cat=101&ccb=1-7&_nc_sid=8cd0a2&_nc_ohc=kz7sGjJAHiQAX9nGxIO&_nc_ht=scontent.fhan15-1.fna&oh=03_AdSVeFn_bYHI6CSA6qf0AMkhy1V8I4wH4HXSmxEXkqToqg&oe=6573410A"
+                  src="upload/slider1.jpg"
                   alt="Vịt Vương Vấn Restaurant Demo"
                   style="border-radius: 5px; width: 50%; height: 50%"
                 />
