--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                     title="from-farm"
                     width="1630px"
                     height="1900px"
-                    data-lazyload="https://scontent.fsgn5-5.fna.fbcdn.net/v/t1.15752-9/372221345_1323784334912981_8538976615409474763_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=8cd0a2&_nc_ohc=zCgABv5OPFgAX8a_XQX&_nc_ht=scontent.fsgn5-5.fna&oh=03_AdRUKujFR48qUhU2SuuIhr8DpYmL-w1QpizL6j3mkyZ1kg&oe=6573087E"
+                    data-lazyload="upload/slider1.jpg"
                     data-bgposition="center center"
                     data-kenburns="on"
                     data-duration="30000"
@@ -507,7 +507,7 @@
                     title="classic"
                     width="1620px"
                     height="1600px"
-                    data-lazyload="https://scontent.fsgn5-9.fna.fbcdn.net/v/t1.15752-9/368685236_856220076213253_8523518933801458162_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=8cd0a2&_nc_ohc=o8KmTaeleYQAX8MOZ4K&_nc_ht=scontent.fsgn5-9.fna&oh=03_AdRRkWrgVOR8daoaSV40y6aGOcYVduMiH0s9HdKLsoU5wQ&oe=65732E10"
+                    data-lazyload="upload/slider1.jpg"
                     data-bgposition="center center"
                     data-kenburns="on"
                     data-duration="30000"
