--- a/menu.html
+++ b/menu.html
@@ -119,8 +119,7 @@
             <div
               class="hero-section-wrap be-section full-screen-height full-yes be-bg-cover clearfix"
               style="
-                background: url(https://scontent.fhan15-2.fna.fbcdn.net/v/t1.15752-9/385524261_727635248799815_3228650875021045791_n.png?_nc_cat=103&ccb=1-7&_nc_sid=8cd0a2&_nc_ohc=pkpJm5hFkfoAX9wHiGp&_nc_ht=scontent.fhan15-2.fna&oh=03_AdR8H48dd6qwFmVdLtlp2VwzqdKrdsaakKVqkWT7r1-gmQ&oe=65748684)
-                  center;
+                background: url(upload/slider1.jpg) center;
                 background-size: 1500px;
                 height: px !important;
               "
@@ -299,10 +298,7 @@
         <!-- END HEADER -->
 
         <div id="content" class="no-sidebar-page">
-          <img
-            src="https://scontent.fhan15-2.fna.fbcdn.net/v/t1.15752-9/385538742_1010640340219674_2768533044257954970_n.png?_nc_cat=103&ccb=1-7&_nc_sid=8cd0a2&_nc_ohc=-30WRO_guIoAX97NHT4&_nc_ht=scontent.fhan15-2.fna&oh=03_AdT46gfck8R7-Vlh-xh0lCJar4HMV44sT-1bna_WD25mGg&oe=65747EC2"
-            alt=""
-          />
+          <img src="upload/slider1.jpg" alt="" />
         </div>
         <footer id="footer" class="layout-wide">
           <span class="footer-border be-wrap"></span>
