--- a/index.html
+++ b/index.html
@@ -659,7 +659,11 @@
         <!-- if ( isset($be_themes_data['opt-header-type']) && ('top' == $be_themes_data['opt-header-type'] ) ) { -->
 
         <header id="header" class="ifhome">
-          <div id="header-inner-wrap" class="style3">
+          <div
+            style="background-color: #641313"
+            id="header-inner-wrap"
+            class="style3"
+          >
             <div id="left-header-mobile" class="clearfix">
               <div class="logo">
                 <a href="index.html">
@@ -729,12 +733,13 @@
                   <div class="menu-controls mobile-nav-controller">
                     <div class="font-icon custom-font-icon">
                       <span class="menu-icon menu-icon-first">
-                        <a href="menu.html">Menu</a></span
+                        <a href="menu.html"></a></span
                       ><span class="menu-icon menu-icon-second"
-                        ><a href="menu.html">Menu</a></span
-                      ><span class="menu-icon menu-icon-third"
-                        ><a href="menu.html">Menu</a></span
-                      >
+                        ><a href="menu.html"></a
+                      ></span>
+                      <span class="menu-icon menu-icon-third"
+                        ><a href="menu.html"></a
+                      ></span>
                     </div>
                   </div>
                 </div>
@@ -747,10 +752,6 @@
                     </li>
                     <li class="menu-item"><a href="about.html">About</a></li>
                     <li class="menu-item"><a href="menu.html">Menu</a></li>
-                    <!-- <li class="menu-item">
-                      <a href="gallery.html">Duck Pan</a>
-                    </li>
-                    <li class="menu-item"><a href="blog.html">Blog</a></li> -->
                     <li class="menu-item">
                       <a href="reservations.html">Contact Us</a>
                     </li>
@@ -770,8 +771,6 @@
                   </li>
                   <li class="menu-item"><a href="about.html">About</a></li>
                   <li class="menu-item"><a href="menu.html">Menu</a></li>
-                  <li class="menu-item"><a href="gallery.html">Duck Pan</a></li>
-                  <li class="menu-item"><a href="blog.html">Blog</a></li>
                   <li class="menu-item">
                     <a href="reservations.html">Contact Us</a>
                   </li>
