--- a/blog.html
+++ b/blog.html
@@ -167,7 +167,11 @@
         </div>
 
         <header id="header">
-          <div id="header-inner-wrap" class="style3">
+          <div
+            style="background-color: #641313"
+            id="header-inner-wrap"
+            class="style3"
+          >
             <div id="left-header-mobile" class="clearfix">
               <div class="logo">
                 <a href="index.html"
@@ -259,10 +263,7 @@
                     </li>
                     <li class="menu-item"><a href="about.html">About</a></li>
                     <li class="menu-item"><a href="menu.html">Menu</a></li>
-                    <li class="menu-item">
-                      <a href="gallery.html">Duck Pan</a>
-                    </li>
-                    <li class="menu-item"><a href="blog.html">Blog</a></li>
+
                     <li class="menu-item">
                       <a href="reservations.html">Contact Us</a>
                     </li>
@@ -282,8 +283,6 @@
                   </li>
                   <li class="menu-item"><a href="about.html">About</a></li>
                   <li class="menu-item"><a href="menu.html">Menu</a></li>
-                  <li class="menu-item"><a href="gallery.html">Duck Pan</a></li>
-                  <li class="menu-item"><a href="blog.html">Blog</a></li>
                   <li class="menu-item">
                     <a href="reservations.html">Contact Us</a>
                   </li>
