--- a/menu.html
+++ b/menu.html
@@ -170,7 +170,11 @@
         </div>
 
         <header id="header">
-          <div id="header-inner-wrap" class="style3">
+          <div
+            style="background-color: #641313"
+            id="header-inner-wrap"
+            class="style3"
+          >
             <div id="left-header-mobile" class="clearfix">
               <div class="logo">
                 <a href="index.html"
@@ -262,10 +266,6 @@
                     </li>
                     <li class="menu-item"><a href="about.html">About</a></li>
                     <li class="menu-item"><a href="menu.html">Menu</a></li>
-                    <!-- <li class="menu-item">
-                      <a href="gallery.html">Duck Pan</a>
-                    </li>
-                    <li class="menu-item"><a href="blog.html">Blog</a></li> -->
                     <li class="menu-item">
                       <a href="reservations.html">Contact Us</a>
                     </li>
@@ -285,8 +285,6 @@
                   </li>
                   <li class="menu-item"><a href="about.html">About</a></li>
                   <li class="menu-item"><a href="menu.html">Menu</a></li>
-                  <li class="menu-item"><a href="gallery.html">Duck Pan</a></li>
-                  <li class="menu-item"><a href="blog.html">Blog</a></li>
                   <li class="menu-item">
                     <a href="reservations.html">Contact Us</a>
                   </li>
