--- a/reservations.html
+++ b/reservations.html
@@ -169,7 +169,11 @@
         </div>
 
         <header id="header">
-          <div id="header-inner-wrap" class="style3">
+          <div
+            style="background-color: #641313"
+            id="header-inner-wrap"
+            class="style3"
+          >
             <div id="left-header-mobile" class="clearfix">
               <div class="logo">
                 <a href="index.html"
@@ -261,10 +265,6 @@
                     </li>
                     <li class="menu-item"><a href="about.html">About</a></li>
                     <li class="menu-item"><a href="menu.html">Menu</a></li>
-                    <!-- <li class="menu-item">
-                      <a href="gallery.html">Duck Pan</a>
-                    </li>
-                    <li class="menu-item"><a href="blog.html">Blog</a></li> -->
                     <li class="menu-item">
                       <a href="reservations.html">Contact Us</a>
                     </li>
@@ -284,8 +284,6 @@
                   </li>
                   <li class="menu-item"><a href="about.html">About</a></li>
                   <li class="menu-item"><a href="menu.html">Menu</a></li>
-                  <li class="menu-item"><a href="gallery.html">Duck Pan</a></li>
-                  <li class="menu-item"><a href="blog.html">Blog</a></li>
                   <li class="menu-item">
                     <a href="reservations.html">Contact Us</a>
                   </li>
@@ -360,32 +358,6 @@
                           <div class="rtb-booking-form">
                             <form id="contact-form" class="contact">
                               <fieldset class="contact">
-                                <div class="name">
-                                  <label for="rtb-name"> Name </label>
-                                  <input
-                                    type="text"
-                                    name="name"
-                                    id="name"
-                                    style="
-                                      width: 100%;
-                                      margin-bottom: 10px !important;
-                                    "
-                                  />
-                                </div>
-
-                                <div class="email">
-                                  <label for="rtb-email"> Email </label>
-                                  <input
-                                    type="text"
-                                    name="mail"
-                                    id="mail"
-                                    style="
-                                      width: 100%;
-                                      margin-bottom: 10px !important;
-                                    "
-                                  />
-                                </div>
-
                                 <div class="phone">
                                   <label for="rtb-phone"> Phone </label>
                                   <input
