--- a/about.html
+++ b/about.html
@@ -325,7 +325,7 @@
                           <p>
                             <img
                               class="alignnone size-large wp-image-15"
-                              src="upload/slider1.jpg"
+                              src="images/398301559_880918023661347_3423894513359552052_n.jpg"
                               alt="about-Vịt Vương Vấn"
                               style="border-radius: 40px; margin-top: 20px"
                             />
@@ -369,248 +369,7 @@
                   <div
                     class="be-section-pad clearfix"
                     style="padding-top: 0px; padding-bottom: 0px"
-                  >
-                    <div class="be-row">
-                      <div class="one-col column-block clearfix">
-                        <div class="be-custom-column-inner">
-                          <div class="portfolio-all-wrap">
-                            <div
-                              class="portfolio full-screen full-screen-gutter style1-gutter four-col"
-                              style="margin-right: 30px"
-                              data-action="get_be_gallery_with_pagination"
-                              data-paged="1"
-                              data-masonry="0"
-                            >
-                              <div
-                                class="portfolio-container clickable clearfix portfolio-shortcode be-photoswipe-gallery none"
-                              >
-                                <div
-                                  class="element be-hoverlay not-wide no-wide-width-height style1-hover c_to_c"
-                                  style="margin-bottom: 30px !important"
-                                >
-                                  <div
-                                    class="element-inner"
-                                    style="margin-left: 30px"
-                                  >
-                                    <a
-                                      href="upload/Vịt Vương Vấn_demos_04.jpg"
-                                      data-size="1920x1280"
-                                      data-href="upload/Vịt Vương Vấn_demos_04.jpg"
-                                      class="thumb-wrap image-popup-vertical-fit mfp-image"
-                                      title=""
-                                    >
-                                      <div class="flip-wrap">
-                                        <div class="flip-img-wrap none-effect">
-                                          <img
-                                            src="upload/Vịt Vương Vấn_demos_04-650x406.jpg"
-                                            alt
-                                          />
-                                        </div>
-                                      </div>
-                                      <div class="thumb-overlay">
-                                        <div
-                                          class="thumb-bg"
-                                          style="
-                                            background-color: rgba(
-                                              0,
-                                              0,
-                                              0,
-                                              0.3
-                                            );
-                                          "
-                                        >
-                                          <div
-                                            class="thumb-title-wrap display-table-cell vertical-align-middle align-center fadeIn animated"
-                                          >
-                                            <div class="thumb-title">
-                                              <i
-                                                class="portfolio-overlay-icon"
-                                              ></i>
-                                            </div>
-                                          </div>
-                                        </div>
-                                      </div> </a
-                                    ><a
-                                      href="#"
-                                      class="custom-like-button no-liked"
-                                      data-post-id="33"
-                                      ><i class="font-icon icon-icon_heart"></i
-                                      ><span>0</span></a
-                                    >
-                                  </div>
-                                </div>
-                                <div
-                                  class="element be-hoverlay not-wide no-wide-width-height style1-hover c_to_c"
-                                  style="margin-bottom: 30px !important"
-                                >
-                                  <div
-                                    class="element-inner"
-                                    style="margin-left: 30px"
-                                  >
-                                    <a
-                                      href="upload/Vịt Vương Vấn_demos_12.jpg"
-                                      data-size="1920x1280"
-                                      data-href="upload/Vịt Vương Vấn_demos_12.jpg"
-                                      class="thumb-wrap image-popup-vertical-fit mfp-image"
-                                      title=""
-                                    >
-                                      <div class="flip-wrap">
-                                        <div class="flip-img-wrap none-effect">
-                                          <img
-                                            src="upload/Vịt Vương Vấn_demos_12-650x406.jpg"
-                                            alt
-                                          />
-                                        </div>
-                                      </div>
-                                      <div class="thumb-overlay">
-                                        <div
-                                          class="thumb-bg"
-                                          style="
-                                            background-color: rgba(
-                                              0,
-                                              0,
-                                              0,
-                                              0.3
-                                            );
-                                          "
-                                        >
-                                          <div
-                                            class="thumb-title-wrap display-table-cell vertical-align-middle align-center fadeIn animated"
-                                          >
-                                            <div class="thumb-title">
-                                              <i
-                                                class="portfolio-overlay-icon"
-                                              ></i>
-                                            </div>
-                                          </div>
-                                        </div>
-                                      </div> </a
-                                    ><a
-                                      href="#"
-                                      class="custom-like-button no-liked"
-                                      data-post-id="34"
-                                      ><i class="font-icon icon-icon_heart"></i
-                                      ><span>0</span></a
-                                    >
-                                  </div>
-                                </div>
-                                <div
-                                  class="element be-hoverlay not-wide no-wide-width-height style1-hover c_to_c"
-                                  style="margin-bottom: 30px !important"
-                                >
-                                  <div
-                                    class="element-inner"
-                                    style="margin-left: 30px"
-                                  >
-                                    <a
-                                      href="upload/Vịt Vương Vấn_demos_18.jpg"
-                                      data-size="1920x1280"
-                                      data-href="upload/Vịt Vương Vấn_demos_18.jpg"
-                                      class="thumb-wrap image-popup-vertical-fit mfp-image"
-                                      title=""
-                                    >
-                                      <div class="flip-wrap">
-                                        <div class="flip-img-wrap none-effect">
-                                          <img
-                                            src="upload/Vịt Vương Vấn_demos_18-650x406.jpg"
-                                            alt
-                                          />
-                                        </div>
-                                      </div>
-                                      <div class="thumb-overlay">
-                                        <div
-                                          class="thumb-bg"
-                                          style="
-                                            background-color: rgba(
-                                              0,
-                                              0,
-                                              0,
-                                              0.3
-                                            );
-                                          "
-                                        >
-                                          <div
-                                            class="thumb-title-wrap display-table-cell vertical-align-middle align-center fadeIn animated"
-                                          >
-                                            <div class="thumb-title">
-                                              <i
-                                                class="portfolio-overlay-icon"
-                                              ></i>
-                                            </div>
-                                          </div>
-                                        </div>
-                                      </div> </a
-                                    ><a
-                                      href="#"
-                                      class="custom-like-button no-liked"
-                                      data-post-id="35"
-                                      ><i class="font-icon icon-icon_heart"></i
-                                      ><span>0</span></a
-                                    >
-                                  </div>
-                                </div>
-                                <div
-                                  class="element be-hoverlay not-wide no-wide-width-height style1-hover c_to_c"
-                                  style="margin-bottom: 30px !important"
-                                >
-                                  <div
-                                    class="element-inner"
-                                    style="margin-left: 30px"
-                                  >
-                                    <a
-                                      href="upload/Vịt Vương Vấn_demos_24.jpg"
-                                      data-size="1920x1280"
-                                      data-href="upload/Vịt Vương Vấn_demos_24.jpg"
-                                      class="thumb-wrap image-popup-vertical-fit mfp-image"
-                                      title=""
-                                    >
-                                      <div class="flip-wrap">
-                                        <div class="flip-img-wrap none-effect">
-                                          <img
-                                            src="upload/Vịt Vương Vấn_demos_24-650x406.jpg"
-                                            alt
-                                          />
-                                        </div>
-                                      </div>
-                                      <div class="thumb-overlay">
-                                        <div
-                                          class="thumb-bg"
-                                          style="
-                                            background-color: rgba(
-                                              0,
-                                              0,
-                                              0,
-                                              0.3
-                                            );
-                                          "
-                                        >
-                                          <div
-                                            class="thumb-title-wrap display-table-cell vertical-align-middle align-center fadeIn animated"
-                                          >
-                                            <div class="thumb-title">
-                                              <i
-                                                class="portfolio-overlay-icon"
-                                              ></i>
-                                            </div>
-                                          </div>
-                                        </div>
-                                      </div> </a
-                                    ><a
-                                      href="#"
-                                      class="custom-like-button no-liked"
-                                      data-post-id="37"
-                                      ><i class="font-icon icon-icon_heart"></i
-                                      ><span>0</span></a
-                                    >
-                                  </div>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
+                  ></div>
                 </div>
                 <div
                   class="be-section clearfix"
@@ -672,7 +431,7 @@
                           <p>
                             <img
                               class="alignnone size-large wp-image-38"
-                              src="upload/slider1.jpg"
+                              src="images/372221345_1323784334912981_8538976615409474763_n.jpg"
                               alt="Vịt Vương Vấn_demos_10"
                               style="border-radius: 40px; height: 80%"
                             />
