--- a/menu.html
+++ b/menu.html
@@ -296,7 +296,10 @@
         <!-- END HEADER -->
 
         <div id="content" class="no-sidebar-page">
-          <img src="upload/slider1.jpg" alt="" />
+          <img
+            src="images/385538742_1010640340219674_2768533044257954970_n.png"
+            alt=""
+          />
         </div>
         <footer id="footer" class="layout-wide">
           <span class="footer-border be-wrap"></span>
