--- a/about.html
+++ b/about.html
@@ -431,7 +431,7 @@
                           <p>
                             <img
                               class="alignnone size-large wp-image-38"
-                              src="images/385484321_892471859115382_7246926374405572202_n.jpg"
+                              src="upload/slider1.jpg"
                               alt="Vịt Vương Vấn_demos_10"
                               style="border-radius: 40px; height: 80%"
                             />
