--- a/reservations.html
+++ b/reservations.html
@@ -119,8 +119,7 @@
             <div
               class="hero-section-wrap be-section full-screen-height full-yes be-bg-overlay clearfix"
               style="
-                background: url(images/385484321_892471859115382_7246926374405572202_n.jpg)
-                  no-repeat fixed center;
+                background: url(upload/slider1.jpg) no-repeat fixed center;
                 background-size: 100% 100%;
                 height: px !important;
               "
