--- a/about.html
+++ b/about.html
@@ -431,7 +431,7 @@
                           <p>
                             <img
                               class="alignnone size-large wp-image-38"
-                              src="upload/slider1.jpg"
+                              src="images/398301559_880918023661347_3423894513359552052_n.jpg"
                               alt="Vịt Vương Vấn_demos_10"
                               style="border-radius: 40px; height: 80%"
                             />
@@ -452,7 +452,7 @@
             <div class="footer-left-area">
               <div class="footer-content-inner-left">
                 <img
-                  src="upload/slider1.jpg"
+                  src="upload/logo.png"
                   alt="Vịt Vương Vấn Restaurant Demo"
                   style="border-radius: 5px; width: 50%; height: 50%"
                 />
