--- a/reservations.html
+++ b/reservations.html
@@ -402,7 +402,7 @@
               <div class="footer-content-inner-left">
                 <img
                   src="upload/logo.png"
-                  alt="Vịt Vương Vấn Restaurant Demo"
+                  alt="Vịt Vương Vấn "
                 />
                 <div class="linebreak" style="height: 25px"></div>
                 <div
