--- a/blog.html
+++ b/blog.html
@@ -107,6 +107,15 @@
 
     <link rel="shortcut icon" href="upload/logo.png" type="image/x-icon" />
     <link rel="icon" href="upload/logo.png" type="image/x-icon" />
+    <script
+      src="https://static.elfsight.com/platform/platform.js"
+      data-use-service-core
+      defer
+    ></script>
+    <div
+      class="elfsight-app-054a79e5-de70-4a32-a42f-44d5626581b3"
+      data-elfsight-app-lazy
+    ></div>
   </head>
 
   <body
